# mwjungfpga

./: .bazelrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md  flash.tcl  vivado.jou
.github/workflows/: ci.yml
archive/: program_device.tcl
design/led/: BUILD.bazel  led.sv  led.xdc
design/rvfpganexys/: BUILD.bazel
design/rvfpganexys/LiteDRAM/: BUILD.bazel
design/rvfpganexys/LiteDRAM/serv_1.0.2/: BUILD.bazel
design/rvfpganexys/OtherSources/pulp-platform.org__common_cells_1.20.0/: BUILD.bazel
design/rvfpganexys/SweRVolfSoC/: BUILD.bazel
design/rvfpganexys/SweRVolfSoC/BootROM/: BUILD.bazel
design/rvfpganexys/SweRVolfSoC/Interconnect/AxiInterconnect/: BUILD.bazel  axi_intercon.sv
design/rvfpganexys/SweRVolfSoC/Interconnect/AxiInterconnect/pulp-platform.org__axi_0.25.0/: BUILD.bazel
design/rvfpganexys/SweRVolfSoC/Interconnect/AxiInterconnect/pulp-platform.org__axi_0.25.0/src/: axi_cut.sv  axi_demux.sv  axi_dw_converter.sv  axi_lite_demux.sv  axi_lite_regs.sv  axi_lite_xbar.sv  axi_modify_address.sv  axi_serializer.sv  axi_xbar.sv
design/rvfpganexys/SweRVolfSoC/Interconnect/AxiToWb/: BUILD.bazel
design/rvfpganexys/SweRVolfSoC/Interconnect/WishboneInterconnect/: BUILD.bazel
design/rvfpganexys/SweRVolfSoC/Interconnect/WishboneInterconnect/wb_intercon_1.2.2-r1/: BUILD.bazel
design/rvfpganexys/SweRVolfSoC/Peripherals/SystemController/: BUILD.bazel
design/rvfpganexys/SweRVolfSoC/Peripherals/gpio/: BUILD.bazel  gpio_top.v
design/rvfpganexys/SweRVolfSoC/Peripherals/ptc/: BUILD.bazel  ptc_top.v
design/rvfpganexys/SweRVolfSoC/Peripherals/spi/: BUILD.bazel
design/rvfpganexys/SweRVolfSoC/Peripherals/uart/: BUILD.bazel  uart_receiver.v  uart_regs.v  uart_top.v  uart_transmitter.v  uart_wb.v
design/rvfpganexys/SweRVolfSoC/SweRVEh1CoreComplex/: BUILD.bazel  mem.sv  swerv.sv  swerv_wrapper_dmi.sv
design/rvfpganexys/SweRVolfSoC/SweRVEh1CoreComplex/dbg/: dbg.sv
design/rvfpganexys/SweRVolfSoC/SweRVEh1CoreComplex/dec/: dec_ib_ctl.sv
design/rvfpganexys/SweRVolfSoC/SweRVEh1CoreComplex/dma/: dma_ctrl.sv
design/rvfpganexys/SweRVolfSoC/SweRVEh1CoreComplex/ifu/: ifu_aln_ctl.sv  ifu_ic_mem.sv  ifu_iccm_mem.sv  ifu_mem_ctl.sv
design/rvfpganexys/SweRVolfSoC/SweRVEh1CoreComplex/include/: swerv_types.sv
design/rvfpganexys/SweRVolfSoC/SweRVEh1CoreComplex/lsu/: lsu.sv  lsu_addrcheck.sv  lsu_bus_buffer.sv  lsu_bus_intf.sv  lsu_dccm_ctl.sv  lsu_dccm_mem.sv  lsu_ecc.sv  lsu_lsc_ctl.sv  lsu_stbuf.sv
design/rvfpganexys/SweRVolfSoC/SweRVEh1CoreComplex/pic/: pic_ctrl.sv
design/veerwolf_nexys/: BUILD.bazel
design/vga_top/: BUILD.bazel  vga_top.sv  vga_top.xdc
hdl/counter/src/: counter.sv
hdl/fsm/src/: fsm.sv
hdl/memory/src/: block_memory.sv
modules/counter/: BUILD.bazel
modules/counter/sim/: counter_tb.sv
modules/counter/src/: counter.sv
rtl/: BUILD.bazel
rtl/clock_generator/: BUILD.bazel  clock_generator.sv  clock_generator_adv.sv
rtl/counter/: BUILD.bazel  counter.sv  counter_tb.sv
rtl/fixed_delay/: BUILD.bazel  fixed_delay.sv  fixed_delay_tb.sv
rtl/vga/: BUILD.bazel  vga_controller.sv  vga_controller_tb.sv  vga_timing_generator.sv
rules/: defs.bzl
rules/verilator/: BUILD.bazel  sv_getenv.cpp  verilator_harness_pkg.sv  verilator_sim.bzl  verilator_sim.sh.tpl
rules/vivado/: BUILD.bazel  program_device.bzl  program_device.tcl.template
sim_lib/: BUILD.bazel  verilator_sim.bzl
sim_src/: sc_time_stamp.cc  sv_getenv.cpp
tools/vivado/: BUILD.bazel  xilinx_env.sh
