bazel_dep(name = "rules_verilog", version = "1.4.2")

bazel_dep(name = "rules_verilator", version = "1.1.1")
# Uncomment below to use the forked version of rules_verilator.
# git_override(
#     module_name = "rules_verilator",
#     branch = "dev",
#     remote = "https://github.com/MaxwellJung/rules_verilator.git",
# )
# Uncomment below to use the local version of rules_verilator.
# local_path_override(
#     module_name = "rules_verilator",
#     path = "../rules_verilator",
# )

register_toolchains(
  "@rules_verilator//verilator:verilator_toolchain",
)

bazel_dep(name = "rules_cc", version = "0.2.17")

bazel_dep(name = "rules_vivado", version = "0.4.1")
# Uncomment below to use the forked version of rules_vivado.
# git_override(
#     module_name = "rules_vivado",
#     branch = "hw-bzl",
#     remote = "https://github.com/UebelAndre/rules_vivado.git",
# )

register_toolchains("//tools/vivado:vivado_toolchain")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
  name = "veerwolf",
  urls = ["https://github.com/chipsalliance/VeeRwolf/archive/refs/heads/main.zip"],
  strip_prefix = "VeeRwolf-main",
  build_file = "//third_party:BUILD.veerwolf.bazel",
)

http_archive(
  name = "veer_el2",
  urls = ["https://github.com/chipsalliance/Cores-VeeR-EL2/archive/refs/heads/main.zip"],
  strip_prefix = "Cores-VeeR-EL2-main",
  build_file = "//third_party:BUILD.veer_el2.bazel",
)
