load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_verilog//verilog:defs.bzl", "verilog_library")

verilog_library(
    name = "sv_sim_lib",
    srcs = glob(["*.sv"]),
    visibility = ["//visibility:public"],
)

cc_library(
    name = "cpp_sim_lib",
    srcs = ["sv_getenv.cpp"],
    visibility = ["//visibility:public"],
)

filegroup(
    name = "cpp_sim_timing",
    srcs = ["sc_time_stamp.cc"],
    visibility = ["//visibility:public"],
)
