load("@rules_verilog//verilog:defs.bzl", "verilog_library")
load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")

verilog_library(
    name = "counter",
    srcs = glob([
        "src/*.sv",
        "sim/*.sv",
    ]),
)

verilator_cc_library(
    name = "counter_tb_verilated_main",
    module = ":counter",
    module_top = "counter_tb",
    timing = True,
    trace = True,
    vopts = [
        "-Wall",
        "--main",
    ],
)

cc_test(
    name = "sim",
    srcs = [
        "//:sim_src/sc_time_stamp.cc",
        "//:sim_src/sv_getenv.cpp",
    ],
    deps = [
        ":counter_tb_verilated_main", 
    ],
)
