load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")
load("@rules_verilog//verilog:defs.bzl", "verilog_library")
load("//rules:defs.bzl", "verilator_sim")

verilog_library(
    name = "counter",
    srcs = ["counter.sv"],
    top_module = "counter",
    visibility = ["//visibility:public"],
)

verilog_library(
    name = "counter_tb",
    srcs = ["counter_tb.sv"],
    top_module = "counter_tb",
    deps = [
        ":counter",
        "//rules/verilator:sv_harness",
    ],
)

verilator_cc_library(
    name = "counter_tb_verilated",
    module = ":counter_tb",
    module_top = "counter_tb",
    timing = True,
    trace = True,
    vopts = [
        "-Wall",
        "--main",
    ],
)

verilator_sim(
    name = "sim",
    verilated = ":counter_tb_verilated",
    waveform = "counter_tb.vcd",
)
