load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")
load("@rules_verilog//verilog:defs.bzl", "verilog_library")
load("//rules:defs.bzl", "verilator_sim_run")

_VERILATOR_HARNESS = "//rules/verilator"

verilog_library(
    name = "counter",
    srcs = ["counter.sv"],
    top_module = "counter",
    visibility = ["//visibility:public"],
)

verilog_library(
    name = "counter_tb",
    srcs = ["counter_tb.sv"],
    top_module = "counter_tb",
    deps = [
        ":counter",
        _VERILATOR_HARNESS + ":sv_harness",
    ],
)

verilator_cc_library(
    name = "counter_tb_verilated",
    module = ":counter_tb",
    module_top = "counter_tb",
    timing = True,
    trace = True,
    vopts = [
        "-Wall",
        "--main",
    ],
)

cc_binary(
    name = "sim_bin",
    srcs = [_VERILATOR_HARNESS + ":cpp_timing"],
    deps = [
        ":counter_tb_verilated",
        _VERILATOR_HARNESS + ":cpp_harness",
    ],
)

cc_test(
    name = "sim_test",
    size = "small",
    srcs = [_VERILATOR_HARNESS + ":cpp_timing"],
    deps = [
        ":counter_tb_verilated",
        _VERILATOR_HARNESS + ":cpp_harness",
    ],
)

verilator_sim_run(
    name = "sim",
    sim_bin = ":sim_bin",
    tags = [
        "gui",
        "manual",
    ],
    waveform = "counter_tb.vcd",
)
