load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")
load("@rules_verilog//verilog:defs.bzl", "verilog_library")
load("//rules:defs.bzl", "verilator_sim_run")

_VERILATOR_HARNESS = "//rules/verilator"

verilog_library(
    name = "fixed_delay",
    srcs = ["fixed_delay.sv"],
    top_module = "fixed_delay",
)

verilog_library(
    name = "fixed_delay_tb",
    srcs = ["fixed_delay_tb.sv"],
    top_module = "fixed_delay_tb",
    deps = [
        ":fixed_delay",
        _VERILATOR_HARNESS + ":sv_harness",
    ],
)

verilator_cc_library(
    name = "fixed_delay_tb_main",
    module = ":fixed_delay_tb",
    module_top = "fixed_delay_tb",
    timing = True,
    trace = True,
    vopts = [
        "-Wall",
        "--main",
    ],
)

cc_binary(
    name = "sim_bin",
    srcs = [_VERILATOR_HARNESS + ":cpp_timing"],
    deps = [
        ":fixed_delay_tb_main",
        _VERILATOR_HARNESS + ":cpp_harness",
    ],
)

cc_test(
    name = "sim_test",
    size = "small",
    srcs = [_VERILATOR_HARNESS + ":cpp_timing"],
    deps = [
        ":fixed_delay_tb_main",
        _VERILATOR_HARNESS + ":cpp_harness",
    ],
)

verilator_sim_run(
    name = "sim",
    sim_bin = ":sim_bin",
    tags = ["manual"],
    waveform = "fixed_delay_tb.vcd",
)
