load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")
load("@rules_verilog//verilog:defs.bzl", "verilog_library")
load("//rules:defs.bzl", "verilator_sim_test")

_VERILATOR_HARNESS = "//rules/verilator"

verilog_library(
    name = "fixed_delay",
    srcs = ["fixed_delay.sv"],
    top_module = "fixed_delay",
)

verilog_library(
    name = "fixed_delay_tb",
    srcs = ["fixed_delay_tb.sv"],
    top_module = "fixed_delay_tb",
    deps = [
        ":fixed_delay",
        _VERILATOR_HARNESS + ":sv_harness",
    ],
)

verilator_cc_library(
    name = "fixed_delay_tb_main",
    module = ":fixed_delay_tb",
    module_top = "fixed_delay_tb",
    timing = True,
    trace = True,
    vopts = [
        "-Wall",
        "--main",
    ],
)

# Compiled Verilator simulation model. Run through :sim rather than directly.
cc_binary(
    name = "sim_bin",
    srcs = [_VERILATOR_HARNESS + ":cpp_timing"],
    deps = [
        ":fixed_delay_tb_main",
        _VERILATOR_HARNESS + ":cpp_harness",
    ],
)

# `bazel test //rtl/fixed_delay:sim` runs the sim headless; `bazel run
# //rtl/fixed_delay:sim -- --gtkwave` runs it and opens the waveform.
verilator_sim_test(
    name = "sim",
    size = "small",
    sim_bin = ":sim_bin",
    tags = ["gui"],
    waveform = "fixed_delay_tb.vcd",
)
