load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_verilator//verilator:defs.bzl", "verilator_cc_library")
load("@rules_verilog//verilog:defs.bzl", "verilog_library")
load("//rules:defs.bzl", "verilator_sim_test")

_VERILATOR_HARNESS = "//rules/verilator"

verilog_library(
    name = "vga_timing_generator",
    srcs = ["vga_timing_generator.sv"],
    top_module = "vga_timing_generator",
    visibility = ["//visibility:public"],
    deps = ["//rtl/counter"],
)

verilog_library(
    name = "vga_controller",
    srcs = ["vga_controller.sv"],
    top_module = "vga_controller",
    visibility = ["//visibility:public"],
    deps = [":vga_timing_generator"],
)

verilog_library(
    name = "vga_controller_tb",
    srcs = ["vga_controller_tb.sv"],
    top_module = "vga_controller_tb",
    deps = [
        ":vga_controller",
        _VERILATOR_HARNESS + ":sv_harness",
    ],
)

verilator_cc_library(
    name = "vga_controller_tb_verilated",
    module = ":vga_controller_tb",
    module_top = "vga_controller_tb",
    timing = True,
    trace = True,
    vopts = [
        "-Wall",
        "--main",
    ],
)

# Compiled Verilator simulation model. Run through :sim rather than directly.
cc_binary(
    name = "sim_bin",
    srcs = [_VERILATOR_HARNESS + ":cpp_timing"],
    deps = [
        ":vga_controller_tb_verilated",
        _VERILATOR_HARNESS + ":cpp_harness",
    ],
)

# `bazel test //rtl/vga:sim` runs the sim headless; `bazel run //rtl/vga:sim
# -- --gtkwave` runs it and opens the waveform.
verilator_sim_test(
    name = "sim",
    size = "small",
    sim_bin = ":sim_bin",
    tags = ["gui"],
)
