load("@rules_verilog//verilog:defs.bzl", "verilog_library")

verilog_library(
    name = "boot_rom",
    srcs = [
        "dpram64.v",
        "wb_mem_wrapper.v",
    ],
    visibility = ["//visibility:public"],
)

exports_files(
    srcs = ["sw/boot_main.mem"],
    visibility = ["//visibility:public"],
)
