load("@rules_verilog//verilog:defs.bzl", "verilog_library")

verilog_library(
    name = "swerv_eh1_core_complex",
    srcs = [
        "include/swerv_types.sv",
        "mem.sv",
        "swerv.sv",
        "swerv_wrapper_dmi.sv",
    ] + glob([
        "lib/*.sv",
        "dbg/*.sv",
        "ifu/*.sv",
        "dec/*.sv",
        "exu/*.sv",
        "lsu/*.sv",
        "pic/*.sv",
        "dma/*.sv",
    ]),
    hdrs = [
        "include/build.vh",
        "include/common_defines.vh",
        "include/global.vh",
        "include/pic_map_auto.vh",
    ],
    visibility = ["//visibility:public"],
)
