load("@rules_verilog//verilog:defs.bzl", "verilog_library")

verilog_library(
    name = "axi_interconnect",
    srcs = ["axi_intercon.sv"],
    hdrs = ["axi_intercon.vh"],
    visibility = ["//visibility:public"],
    deps = [
        "//design/rvfpganexys/SweRVolfSoC/Interconnect/AxiInterconnect/pulp-platform.org__axi_0.25.0:axi_0.25.0",
    ],
)
