load("@rules_verilog//verilog:defs.bzl", "verilog_library")

verilog_library(
  name = "uart",
  srcs = [
    "uart_top.v",
    "uart_wb.v",
    "uart_receiver.v",
    "uart_transmitter.v",
    "uart_rfifo.v",
    "uart_tfifo.v",
    "uart_regs.v",
    "raminfr.v",
    "uart_sync_flops.v",
  ],
  hdrs = [
    "uart_defines.vh",
  ],
  visibility = ["//visibility:public"],
)
